reorder folder structure

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.6",
     "@improbable-eng/grpc-web": "^0.15.0",
     "google-protobuf": "^3.21.4",
+    "grpc-tools": "^1.13.0",
+    "grpc-web": "^1.5.0",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
