--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.6",
     "@improbable-eng/grpc-web": "^0.15.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "google-protobuf": "^3.21.4",
     "grpc-tools": "^1.13.0",
     "grpc-web": "^1.5.0",
@@ -18,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "three": "^0.173.0"
   },
   "devDependencies": {
