--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "google-protobuf": "^3.21.4",
     "grpc-tools": "^1.13.0",
     "grpc-web": "^1.5.0",
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.10.1",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
