--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +12,7 @@
     "@grpc/grpc-js": "^1.12.6",
     "@improbable-eng/grpc-web": "^0.15.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "@tanstack/react-query": "^5.69.0",
     "google-protobuf": "^3.21.4",
     "grpc-tools": "^1.13.0",
     "grpc-web": "^1.5.0",
